--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ repositories {
     jcenter()
 }
 
+targetCompatibility = '1.7'
+sourceCompatibility = '1.7'
 
 dependencies {
     // This dependency is found on compile classpath of this component and consumers.
