use jndn-android 0.18

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ sourceCompatibility = '1.7'
 dependencies {
     // This dependency is found on compile classpath of this component and consumers.
     compile 'com.google.guava:guava:20.0'
-    compile files("../jndn/target/jndn-0.15.jar")
+//    compile files("../jndn/target/jndn-0.15.jar")
+    compile 'net.named-data:jndn-android:0.18'
     compile project(':jndn-node')
 
     // Use JUnit test framework
